force-app/main/default/objects/Dealer__c/Dealer__c.object-meta.xml
<CustomObject>
    <label>Dealer</label>
    <nameField>
        <displayFormat>SMD-{0000}</displayFormat>
        <label>Dealer No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>