force-app/main/default/objects/Dealer__c/fields/Dealer_Manager__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The approver for the dealer application</description>
    <label>Dealer Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dealers1</relationshipName>
    <type>Lookup</type>
</CustomField>