force-app/main/default/objects/Dealer__c/fields/Do_You_Have_Registration_Firm__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Have_Registration_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do You Have Registration Firm</label>
    <type>Checkbox</type>
</CustomField>