force-app/main/default/objects/Dealer__c/fields/Do_You_Have_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Have_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do You Have Warehouse</label>
    <type>Checkbox</type>
</CustomField>