force-app/main/default/objects/Dealer__c/fields/Verified_by_Team__c.field-meta.xml
<CustomField>
    <fullName>Verified_by_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified by Team</label>
    <type>Checkbox</type>
</CustomField>