force-app/main/default/objects/Dealer__c/fields/Warehouse_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Capacity__c</fullName>
    <label>Warehouse Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>