force-app/main/default/objects/Dealer__c/fields/Year_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Establishment__c</fullName>
    <label>Year of Establishment</label>
    <type>Date</type>
</CustomField>