force-app/main/default/objects/Dealer__c/validationRules/Annual_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue</fullName>
    <active>true</active>
    <description>Annual Revenue should be minimum 5000</description>
    <errorConditionFormula>NOT(Annual_Revenue__c &gt;=5000)</errorConditionFormula>
    <errorDisplayField>Annual_Revenue__c</errorDisplayField>
    <errorMessage>Annual Revenue should be minimum 5000</errorMessage>
</ValidationRule>