force-app/main/default/objects/Dealer__c/validationRules/Establishment_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Establishment_validation</fullName>
    <active>true</active>
    <description>Organization establishment should be minimum 1 years old</description>
    <errorConditionFormula>NOT(YEAR(TODAY())  -  YEAR( Year_of_Establishment__c ) &gt;1)</errorConditionFormula>
    <errorDisplayField>Year_of_Establishment__c</errorDisplayField>
    <errorMessage>Organization establishment should be minimum 1 years old</errorMessage>
</ValidationRule>