force-app/main/default/objects/Dealer__c/validationRules/First_Name_alphabet_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_alphabet_Only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  First_Name__c ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>Name should be only in alphabets</errorMessage>
</ValidationRule>