force-app/main/default/objects/Dealer__c/validationRules/Gst_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gst_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    LEN(GSTIN__c) &lt;&gt; 15,
    NOT(REGEX(GSTIN__c, &quot;^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}$&quot;))
  )</errorConditionFormula>
    <errorDisplayField>GSTIN__c</errorDisplayField>
    <errorMessage>GSTIN number should be 15 digits.An example of a GSTIN would go like this: 22AAAAA0000A1Z5
First two numbers,Five will be char,Four will any number,One Char,One Number,Alphaber Z,One Number</errorMessage>
</ValidationRule>