force-app/main/default/objects/Dealer__c/validationRules/Last_Name_alphabet_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_alphabet_Only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Last_Name__c ,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Last Name should be alphabet only</errorMessage>
</ValidationRule>