force-app/main/default/objects/Dealer__c/validationRules/Number_of_Employees.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Employees</fullName>
    <active>true</active>
    <description>Employees count should be minimum 5</description>
    <errorConditionFormula>NOT(No_of_Employees__c &gt;= 5)</errorConditionFormula>
    <errorDisplayField>No_of_Employees__c</errorDisplayField>
    <errorMessage>Employees count should be minimum 5</errorMessage>
</ValidationRule>