force-app/main/default/objects/Dealer__c/validationRules/Phone_Number_Should_be_10_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Should_be_10_digits</fullName>
    <active>true</active>
    <errorConditionFormula>Not(REGEX( Phone__c , &quot;\\+91-[0-9]{10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone number field should be of 10 digits only and format should be +91 - enter phone number.</errorMessage>
</ValidationRule>