force-app/main/default/objects/Dealer__c/validationRules/Warehouse_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Warehouse_Capacity</fullName>
    <active>true</active>
    <description>Ware house capacity should be minimum 5000 SFT</description>
    <errorConditionFormula>Warehouse_Capacity__c &lt;=5000</errorConditionFormula>
    <errorDisplayField>Warehouse_Capacity__c</errorDisplayField>
    <errorMessage>Ware house capacity should be minimum 5000 SFT</errorMessage>
</ValidationRule>