force-app/main/default/objects/Dealer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Email__c</columns>
    <columns>GSTIN__c</columns>
    <columns>Verified_by_Team__c</columns>
    <columns>Year_of_Establishment__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>