force-app/main/default/objects/Dealer__c/listViews/Awaiting_for_approval1.listView-meta.xml
<ListView>
    <fullName>Awaiting_for_approval1</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting</value>
    </filters>
    <label>Awaiting for approval1</label>
</ListView>