force-app/main/default/objects/Dealer__c/listViews/Physical_verificationt_team_Dealer.listView-meta.xml
<ListView>
    <fullName>Physical_verificationt_team_Dealer</fullName>
    <filterScope>Queue</filterScope>
    <label>Physical verificationt team</label>
    <queue>Physical_verificationt_team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>